<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">לתת ולקחת</string>
    <string name="splash_screen">&quot;לפעמים מחשבה על אחרים, עושה את כל ההבדל.&quot;</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="next">הבא</string>
    <string name="start">אני מוכן!</string>
    <string name="sign_in">התחבר כעת</string>
    <string name="RegisterNow">הירשם כעת</string>
    <string name="Register">הרשמה</string>
    <string name="noItemsError">פריטים יופיעו בהתאם להגדרות החיפוש שלך, ניתן להגדיר אותן בכפתור המתאים. </string>
    <string name="create_account">צור חשבון</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">התנתק</string>
    <string name="verify_email">אימות אימייל</string>
    <string name="disconnect">התנתק</string>
    <string name="loading">טוען</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">אימייל</string>
    <string name="hint_password">סיסמה</string>
    <string name="auth_failed">התחברות נכשלה</string>
    <string name="SignIn">התחברות</string>
    <string name="SearchSettings">הגדרות חיפוש</string>
    <string name="Dis">KM</string>
    <string name="back">חזור</string>
    <string name="AdvnacedSettings">מתקדם</string>
    <string name="LookingFor">..אני מחפש </string>
    <string name="Role">אני מעוניין</string>
    <string name="hint_register">לא רשום עדיין ? הירשם כעת</string>
    <string name="SearchDistance">מרחק חיפוש:</string>
    <string name="TypeProdName">הקלד שם מוצר</string>
    <string name="SaveSettings">שמור הגדרות</string>
    <string name="ProdSearch">לחפש מוצר</string>
    <string name="ProdGive">לתת מוצר</string>
    <string name="IntrestingIn" tools:ignore="ExtraTranslation">אני מעוניין..</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="upload_photo_header">בחר תמונה שברצונך להוסיף למוצר</string>
    <string name="choose_photo">בחירת תמונה</string>
    <string name="upload_photo">העלאת מוצר</string>
    <string name="without_photo">העלאה מוצר ללא תמונה -></string>
    <string name="items_history">היסטוריית מוצרים</string>
    <string name="upload_item">העלאת מוצר חדש</string>
    <string name="item_name">שם המוצר</string>
    <string name="item_desc">תיאור המוצר</string>
    <string name="choose_location">מיקום המוצר</string>
    <string name="current_location">השתמש במיקום נוכחי</string>
    <string name="add_photo">הוספת תמונה</string>

</resources>
