<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@color/colorSplashbg">

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upload_photo_header"
        android:textColor="@color/colorSplashtext"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:fontFamily="@font/yehuda" />


    <ImageView
        android:id="@+id/IdProf"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/frame"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/ChooseBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/choose_photo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorSplashtext"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"
        app:fontFamily="@font/yehuda"
        android:background="@color/buttonsColor"/>
    <Button
        android:id="@+id/UploadBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/upload_photo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorSplashtext"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"
        app:fontFamily="@font/yehuda"
        android:background="@color/buttonsColor"/>

</LinearLayout>