<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashbg">

    <TextView
        android:id="@+id/register_Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:includeFontPadding="true"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/colorSplashtext"
        android:textSize="68sp"
        android:textStyle="bold"
        app:fontFamily="@font/comicbold"
        tools:text="לתת ולקחת" />

    <TextView
        android:id="@+id/text_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp"
        android:includeFontPadding="true"
        android:text="@string/splash_screen"
        android:textAlignment="center"
        android:textColor="@color/colorSplasheadline"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/yehuda" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/input_password"
        android:layout_alignStart="@+id/input_password"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="172dp"
        android:hint="אימייל"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:hint="סיסמה"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="219dp"
        android:text="@string/RegisterNow" />


</RelativeLayout>
